5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2504.log
== TEST (2019-05-15 18:40:40) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(2*ql1!=qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:46) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(2*ql1!=qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:06) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2==qlc):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(ql1/2==qlc):
NameError: name 'qlc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:17) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2==qlc):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(ql1/2==qlc):
NameError: name 'qlc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:43) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2==qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(ql1/2==qlc):
NameError: name 'qlc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:29) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2!=qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(ql1/2==qlc):
NameError: name 'qlc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:35) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2!=qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(ql1/2==qlc):
NameError: name 'qlc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:07) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2<qc1):
	qc1=qc1 * pv/100
	ql1=ql * pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:36) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2<qc1):
	qc1=qc1 * pv
	ql1=ql * pl
	cont=cont+1
print(cont)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:51:08) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2<qc1):
	qc1=qc1 + pv/100
	ql1=ql + pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:51:24) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2!=qc1):
	qc1=qc1 + pv/100
	ql1=ql + pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:24) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
qc1=qc
ql1=ql

while(ql1/2<qc1):
	qc1=qc1 + qc1*pv/100
	ql1=ql + ql*pl/100
	cont=cont+1
print(cont)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:16) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
ql1=ql
qc1=qc


while(ql1/2<qc1):
	ql1=ql1 + ql1*pl/100
	qc1=qc1 + qc1*pv/100
	cont=cont+1

	
print(cont)	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:26:33) 
-- CODE:
qc=int(input("Quantidade inicial de copias do virus: "))
ql=int(input("Quantidade inical de leucocitos: "))
pv=int(input("Percentual da multiplicacao do vitus: "))
pl=int(input("Percentual de multiplicacao dos leucocitos: "))

cont=0
ql1=ql
qc1=qc


while(ql1/2<qc1):
	ql1=ql1 + ql1*pl/100
	qc1=qc1 + qc1*pv/100
	cont=cont+1

	
print(cont)	
-- EXECUTION TIME:
0.194351
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
